--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "chromatic": "^6.17.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "storybook": "^7.0.6",
